--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,112 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Website Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Website Title</title>
 
-  <link rel="stylesheet" href="css/app.css">
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="fonts/stylesheet.css" rel="stylesheet" />
+
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fa fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="corporate.html">Corporate Structure</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="roadmap.html">Roadmap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="masthead">
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Welcome To Our Studio!</div>
+                <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+                <a class="btn btn-primary buttons text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <a href="#">Hello World</a>
+            </div>
+        </div>
+    </header>
+
+
+    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>    <div class="SectionHeader">
+        <h1 class="SectionTitle">Your Gateway to <br /> The Crypto Economy</h1>
+        <hr class="lines">
+        <p class="SectionSubtitle">
+            BitPay allows you to accept payments in Bitcoin and Bitcoin Cash and receive <br> funds directly to your bank account. Bank deposits in 38 countries, settled in <br> US Dollars, Euros, GBP, and more.
+        </p>
+    </div>
+
+
+
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom Javascript -->
+    <script src="js/script.js"></script>
+
 </body>
 </html>
