--- a/app/index.html
+++ b/app/index.html
@@ -15,41 +15,47 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
-       <header>
+    <header>
         <div class="container">
-            <a href="#" class="logo">Graviti Chain</a>
+
+            <a href="#" class="logo"><img src="img/Logo.png" alt="Site Logo on Nav"></a>
             <input type="checkbox" id="navToggle" class="navToggle">
+
             <label for="navToggle" class="hamBurgerWrap">
                 <span class="hamBurgerTxt">Menu</span>
                 <div id="nav-icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span></span><span></span><span></span><span></span>
                 </div>
             </label>
+            
             <nav>
                 <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Roadmap</a>
-                    </li>
-                    <li>
-                        <a href="#">Project</a>
-                    </li> 
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Roadmap</a></li>
+                    <li><a href="#">Project</a></li> 
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+
         </div>
     </header>
+
+    <section id="hero" class="hero">
+        <div class="container">	
+            <div class="sectionContent flex">
+                <div class="sectionText flexItem">
+                    <h1 class="sectionTitle">Hello Dolly</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate maxime id, veniam vitae natus eligendi quis fugit sit eius nulla!</p>
+                    <a href="#" class="button">Click Me</a>
+                </div>
+
+                <div class="sectionIMG flexItem">
+                    <h1>Images Coming soon</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Custom Javascript -->
     <script src="js/script.js"></script>
